# ngs-statter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  Singularity  build-extension.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: CI.yml  builder.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  overview.rst
docs/source/command_groups/: alignment.rst  crosslink.rst  fastq.rst  flexbar.rst  genetype.rst  kraken.rst  sample.rst
src/: __init__.py  align_stats.rs  fastq_stats.rs  lib.rs  reader.rs  star_stats.rs  unmapped.rs
src/scripts/: cli.py  collect_stats.py  header_fixer.py  sourmash_metagenome_parser.py
src/statter/: README.md
src/statter/analyzers/: roi_xlink_overlapper.py
src/statter/clis/: bamstat_cli.py  crosslink_cli.py  flexbar_cli.py  fq_cli.py  genetype_cli.py  kraken_cli.py  sample_cli.py
src/statter/crosslink/: README.md  find_overlaps.py
src/statter/json_models/: fastp.py  sample_meta.py  sample_stats.py
src/statter/parsers/: README.md  bam_parser.py  bed_ROI_parser.py  crosslink_parser.py  csv_meta_parser.py  fastp_json_parser.py  fastq_stats.py  gff_parser.py  taxonomy_parser.py
src/statter/plotters/: crosslink_plotter.py  ganon_contamination_vs_unclassified_read_length_distribution.py  read_length_distribution.py  roi_xlink_heatmap.py  roi_xlink_line_plotter.py
src/statter/scripts/: cli.py
src/statter_rs/: align_stats.rs  flexbar_fastq_parser.rs  gene_type_stats.rs  gff_parser.rs  lib.rs  unmapped.rs
statter/: README.md  fastq_stats.py  setup.py  yaml_validator.py
statter/clis/: bamstat_cli.py  crosslink_cli.py  flexbar_cli.py  fq_cli.py  genetype_cli.py  kraken_cli.py  sample_cli.py
statter/json_models/: STAR_align_stats.py  sample_stats.py
statter/parsers/: align_stats.py  bam_parser.py  fastp_json_parser.py  fastq_stats.py  flexbar_fastq_parser.py  ganon_abundance_parser.py  ganon_unclassified_fastq_writer.py  gff_parser.py  kraken_report_parser.py  sample_stats.py  sourmash_kreport_parser.py  stats_collector.py
statter/parsers/crosslink/: overlap_finder.py  sites_to_bed.py  structure_indexer.py  yaml_parser.py
statter/plotters/: README.md  crosslink_plotter.py  ganon_contamination_vs_unclassified_read_length_distribution.py  gene_type_read_length_distribution.py  read_length_distribution.py
statter/scripts/: all_stats.py  bam_stats.py  cli.py  collect_stats.py  ganon_parser.py  ganon_unclassified_to_fastq.py  kraken_parser.py  parse_read_lengths.py  read_length_stats.py  unmapped_splitter.py
