[package]
name = "mad_statter"
version = "0.10.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "statter"
path = "src/statter_rs/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rust-htslib = "*"
flate2 = "*"
regex = "*"
