[package]
name = "mad_statter"
version = "0.20.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "statter"
path = "src/statter_rs/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rust-htslib = "*"
regex = "*"
flate2 = { version = "1.1.9" }
pyo3 = { version = "0.27.0", features = ["extension-module"] }
