[project]
name = "statter"
version = "1.11.4"
description = ""
authors = [
    {name = "Sudeep Sahadevan",email = "sudeep.sahadevan@embl.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh (>=3.8.0,<4.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pysam (>=0.23.3,<0.24.0)",
    "networkx (>=3.5,<4.0)",
    "pyfastx (>=2.2.0,<3.0.0)",
    "rtree (>=1.4.1,<2.0.0)",
    "pandas[pyarrow]==3.0.0",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "polars[numpy,pandas]>=1.40.1",
    "scipy>=1.17.1",
    "rich-click>=1.9.7",
]



[project.scripts]
statter = "statter.scripts.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "statter"
python-source = "src"
