[project]
name = "NGS-statter"
version = "1.13.1"
description = "A collection of utilities for computing statistics on genomic sequences and alignments."
authors = [
    {name = "Sudeep Sahadevan",email = "biohentze@embl.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh (>=3.8.0,<4.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "pyfastx (>=2.2.0,<3.0.0)",
    "pandas[pyarrow]==3.0.0",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "polars[numpy,pandas]>=1.40.1",
    "scipy>=1.17.1",
    "rich-click>=1.9.7",
]

[project.scripts]
ngs-statter = "statter.scripts.cli:runner"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "statter"
python-source = "src"

[dependency-groups]
documentation = [
    "commonmark>=0.9.2",
    "mock>=5.2.0",
    "pillow>=12.2.0",
    "recommonmark>=0.7.1",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-napoleon>=0.7",
]
